build: added kura-apps-target-definition for can profile
Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/kura-examples/pom.xml
+++ b/kura-examples/pom.xml
@@ -243,8 +243,8 @@
 					<target>
 						<artifact>
 							<groupId>org.eclipse.kura</groupId>
+							<artifactId>kura-apps-target-definition.target</artifactId>
 							<version>${kura.target.definition.version}</version>
-							<artifactId>kura-target-definition.target</artifactId>
 						</artifact>
 					</target>
 				</configuration>
