--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,19 @@ target
 .sonarlint
 .metadata
 .recommenders
+kura/data
+kura/snapshots
+kura/target-definition/*/plugins/*
+kura/target-definition/*/source/*
+kura/target-definition/repository/artifacts.xml
+kura/target-definition/repository/content.xml
+kura/target-definition/repository/plugins/*
+kura/target-definition/*/repository/artifacts.xml
+kura/target-definition/*/repository/content.xml
+kura/target-definition/*/repository/plugins/*
+kura/tools/archetype/example/src/main/resources/archetype-resources/target-definition
+target-platform/*/META-INF/MANIFEST.MF
+target-platform/*/*/META-INF/MANIFEST.MF
 gwt-unitCache
 .launch
 www-test
