--- a/kura-addon-prototypes/org.eclipse.kura.example.driver/distrib/pom.xml
+++ b/kura-addon-prototypes/org.eclipse.kura.example.driver/distrib/pom.xml
@@ -36,11 +36,12 @@
     </organization>
 
     <properties>
-    
+
         <skip.copy.target.definition>true</skip.copy.target.definition>
-    	
+
         <!--
-            With n being the start level, config.ini will be populated depending on which plugins directory the bundle is put:
+            With n being the start level, config.ini will be populated depending on which plugins directory the
+        bundle is put:
             n => bundle.name:@n;
             ns => bundle.name:@n:start;
         -->
@@ -52,19 +53,16 @@
         <!--
             Available DEB architectures:
             all, amd64, arm64
-
-            Available RPM architectures:
-            noarch, x86_64, aarch64
         -->
         <deb.architecture>all</deb.architecture>
-        <rpm.architecture>noarch</rpm.architecture>
 
-        <!-- final name of the generated debian and rpm package -->
+        <!-- final name of the generated debian package -->
         <package.name>org.eclipse.kura.example.driver</package.name>
 
         <!-- edit following fields and file deb/control/control -->
         <summary>Summary line (do not end this line with a dot, max 60 chars)</summary>
-        <long.description>Here goes the long description of the packages, in this case this is an example addon for the Eclipse Kura Framework.</long.description>
+        <long.description>Here goes the long description of the packages, in this case this is an
+            example addon for the Eclipse Kura Framework.</long.description>
     </properties>
 
     <build>
@@ -81,7 +79,8 @@
                             <goal>copy</goal>
                         </goals>
                         <configuration>
-                            <sourceFile>${project.basedir}/../bundles/${jar.name}/target/${jar.name}-${project.version}.jar</sourceFile>
+                            <sourceFile>
+                                ${project.basedir}/../bundles/${jar.name}/target/${jar.name}-${project.version}.jar</sourceFile>
                             <destinationFile>target/input_files/${jar.name}_${project.version}.jar</destinationFile>
                         </configuration>
                     </execution>
@@ -101,7 +100,8 @@
                         </goals>
                         <configuration>
                             <verbose>true</verbose>
-                            <deb>${basedir}/target/deb/${package.name}_${project.version}_${deb.architecture}.deb</deb>
+                            <deb>
+                                ${basedir}/target/deb/${package.name}_${project.version}_${deb.architecture}.deb</deb>
                             <controlDir>${project.basedir}/deb/control</controlDir>
                             <skipPOMs>false</skipPOMs>
                             <dataSet>
@@ -110,7 +110,8 @@
                                 it is usefull if different files require different prefix (aka:
                                 different destination location) or specific user, group and filemode -->
                                 <data>
-                                    <src>${basedir}/target/input_files/${jar.name}_${project.version}.jar</src>
+                                    <src>
+                                        ${basedir}/target/input_files/${jar.name}_${project.version}.jar</src>
                                     <dst>${jar.name}_${project.version}.jar</dst>
                                     <type>file</type>
                                     <mapper>
@@ -143,78 +144,6 @@
                                 
                                 -->
                             </dataSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>rpm-maven-plugin</artifactId>
-                <version>2.3.0</version>
-                <executions>
-                    <execution>
-                        <id>generate-rpm</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>rpm</goal>
-                        </goals>
-                        <configuration>
-                            <name>${package.name}</name>
-                            <workarea>${basedir}/target/rpm</workarea>
-                            <needarch>${rpm.architecture}</needarch>
-                            <group>Applications/System</group>
-                            <targetOS>linux</targetOS>
-                            <summary>${summary}</summary>
-                            <description>${long.description}</description>
-                            <license>EPL 2.0 (https://www.eclipse.org/legal/epl-2.0/)</license>
-
-                            <mappings>
-                                <!-- Repeate the 'mapping' schema multiple time if you want to
-                                manage different files indipendentely, specifying for each one the
-                                different parameters: it is usefull if different files require
-                                different 'directory' (aka: different destination location) or
-                                specific username, groupname and filemode -->
-                                <mapping>
-                                    <directory>${addon.installation.dir}</directory>
-                                    <filemode>600</filemode>
-                                    <username>kurad</username>
-                                    <groupname>kurad</groupname>
-                                    <sources>
-                                        <!-- It is also possible to specify multiple times the
-                                        'source' to include different files from different
-                                        locations, but with the same 'directory', 'filemode',
-                                        'username' and 'groupname'-->
-                                        <source>
-                                            <location>${basedir}/target/input_files/${jar.name}_${project.version}.jar</location>
-                                        </source>
-                                    </sources>
-                                </mapping>
-
-                                <!-- 
-                                
-                                If all the source file are managed in the same way, it is also possible to specify the path to a
-                                directory to include all the files present in that
-                                
-                                <mapping>
-                                    <directory>${addon.installation.dir}</directory>
-                                    <filemode>600</filemode>
-                                    <username>kurad</username>
-                                    <groupname>kurad</groupname>
-                                    <sources>
-                                        <source>
-                                            <location>
-                                                ${basedir}/target/input_files</location>
-                                        </source>
-                                    </sources>
-                                </mapping>
-                                
-                                -->
-                            </mappings>
-
-                            <requires>
-                                <require>kura</require>
-                            </requires>
                         </configuration>
                     </execution>
                 </executions>
