--- a/kura-examples/test/pom.xml
+++ b/kura-examples/test/pom.xml
@@ -298,7 +298,7 @@
                             <autoStart>true</autoStart>
                         </bundle>
                         <bundle>
-                            <id>org.apache.logging.log4j.slf4j.impl</id>
+                            <id>org.apache.logging.log4j.slf4j2.impl</id>
                             <level>4</level>
                             <autoStart>true</autoStart>
                         </bundle>
@@ -505,7 +505,7 @@
                             </requirement>
                             <requirement>
                                 <type>p2-installable-unit</type>
-                                <id>org.apache.logging.log4j.slf4j.impl</id>
+                                <id>org.apache.logging.log4j.slf4j2.impl</id>
                                 <versionRange>0.0.0</versionRange>
                             </requirement>
                             <requirement>
