--- a/kura-addon-prototypes/org.eclipse.kura.example.driver/bundles/pom.xml
+++ b/kura-addon-prototypes/org.eclipse.kura.example.driver/bundles/pom.xml
@@ -85,7 +85,7 @@
                         <target>
                             <artifact>
                                 <groupId>org.eclipse.kura</groupId>
-                                <artifactId>kura-target-definition.target</artifactId>
+                                <artifactId>kura-apps-target-definition.target</artifactId>
                                 <version>${kura.target.definition.version}</version>
                             </artifact>
                         </target>
@@ -268,33 +268,6 @@
                             </pluginExecutions>
                         </lifecycleMappingMetadata>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.6.0</version>
-                    <executions>
-                        <execution>
-                            <id>copy-local-target-definition</id>
-                            <phase>generate-resources</phase>
-                            <goals>
-                                <goal>copy</goal>
-                            </goals>
-                            <configuration>
-                                <skip>${skip.copy.target.definition}</skip>
-                                <artifactItems>
-                                    <artifactItem>
-                                        <groupId>org.eclipse.kura</groupId>
-                                        <artifactId>kura-target-definition.target</artifactId>
-                                        <version>6.0.0-SNAPSHOT</version>
-                                        <type>target</type>
-                                        <outputDirectory>${project.basedir}/../target-definition</outputDirectory>
-                                        <destFileName>kura-target-definition.target</destFileName>
-                                    </artifactItem>
-                                </artifactItems>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
