--- a/kura-addon-prototypes/org.eclipse.kura.example.driver/tests/test-env/framework/kura.properties
+++ b/kura-addon-prototypes/org.eclipse.kura.example.driver/tests/test-env/framework/kura.properties
@@ -1,15 +1,4 @@
-#
-#    Copyright (c) 2025 Eurotech and/or its affiliates and others
-#  
-#    This program and the accompanying materials are made
-#    available under the terms of the Eclipse Public License 2.0
-#    which is available at https://www.eclipse.org/legal/epl-2.0/
-# 
-#    SPDX-License-Identifier: EPL-2.0
-#
-#    Contributors:
-#     Eurotech
-#
+# Copyright (c) 2025 Eurotech and/or its affiliates. All rights reserved.
 
 kura.name=Kura
 kura.version=6.0.0-SNAPSHOT
