fix: driver problems
Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ DEPENDENCIES
 .vscode
 
 kura-examples/org.eclipse.kura.example.rest.authentication.provider/lib/
+kura-addon-prototypes/org.eclipse.kura.example.driver/target-definition/
