--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,19 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>kura-releases</id>
+            <name>Eclipse Kura Repository - Releases</name>
+            <url>https://repo.eclipse.org/content/repositories/kura-releases/</url>
+        </repository>
+        <repository>
+            <id>kura-snapshots</id>
+            <name>Eclipse Kura Repository - Snapshots</name>
+            <url>https://repo.eclipse.org/content/repositories/kura-snapshots/</url>
+        </repository>
+    </repositories>
+
     <profiles>
         <profile>
             <id>kura-apps-target-definition</id>
