feat: added prototype for kura driver (#3)
* feat: added prototype for kura driver

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* revert: restoring .gitignore file

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: remove rpm plugin

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* refactor: added config constants

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* build: updated distrib pom and control files

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* Update pom.xml

* Update pom.xml

* fix: wrong distrib

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: comments

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* Update Jenkinsfile

* fix: different build problems

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* build: Jenkinsfile

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* build: Jenkinsfile

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: driver problems

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* build: Jenkinsfile

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* build: Jenkinsfile

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* build: Jenkinsfile

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* Update Jenkinsfile

* Update Jenkinsfile

* Update Jenkinsfile

* Update Jenkinsfile

* Update Jenkinsfile

---------

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ DEPENDENCIES
 .java-version
 .vscode
 
+kura-examples/org.eclipse.kura.example.rest.authentication.provider/lib/
+kura-addon-prototypes/org.eclipse.kura.example.driver/target-definition/
