--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,17 @@
      Eurotech
 
 -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.eclipse.kura</groupId>
     <artifactId>kura-apps</artifactId>
     <version>6.0.0-SNAPSHOT</version>
+    
     <packaging>pom</packaging>
     <name>Eclipse Kura-Apps</name>
     
@@ -71,6 +74,15 @@
             </activation>
             <modules>
                 <module>kura-examples</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>kura-addon-prototypes</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>kura-addon-prototypes</module>
             </modules>
         </profile>
     </profiles>
