--- a/kura-examples/distrib/pom.xml
+++ b/kura-examples/distrib/pom.xml
@@ -196,8 +196,8 @@
 
         <!-- TO BE EDITED -->
         <!-- properties used for artifact upload on artifactory repository -->
-        <kura.repo.distribution>CHANGEME</kura.repo.distribution>
-        <kura.repo.module>CHANGEME</kura.repo.module>
+        <kura.repo.distribution>6</kura.repo.distribution>
+        <kura.repo.module>base</kura.repo.module>
 
         <!-- edit following fields and file deb/control/control -->
         <summary>Eclipse Kura Addon Examples</summary>
