--- a/kura-addon-prototypes/distrib/pom.xml
+++ b/kura-addon-prototypes/distrib/pom.xml
@@ -67,7 +67,7 @@
         <package.name>kura-addon-prototypes</package.name>
 
         <!-- properties used for artifact upload on artifactory repository -->
-        <kura.repo.distribution>6</kura.repo.distribution>
+        <kura.repo.distribution>kura-6</kura.repo.distribution>
         <kura.repo.module>base</kura.repo.module>
 
         <!-- edit following fields and file deb/control/control -->
