feat: added simple component prototype
Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/kura-addon-prototypes/bundles/pom.xml
+++ b/kura-addon-prototypes/bundles/pom.xml
@@ -342,6 +342,7 @@
     </distributionManagement>
 
     <modules>
-        <module>org.eclipse.kura.example.driver.bundle</module>
+        <module>example-driver.bundle</module>
+        <module>example-simple-component.bundle</module>
     </modules>
 </project>
