--- a/kura-addon-prototypes/tests/pom.xml
+++ b/kura-addon-prototypes/tests/pom.xml
@@ -387,7 +387,8 @@
     </profiles>
 
     <modules>
-        <module>org.eclipse.kura.example.driver.bundle.test</module>
+        <module>example-driver.bundle.test</module>
+        <module>example-simple-component.bundle.test</module>
     </modules>
 
 </project>
