feat: added wire component prototype
Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/kura-addon-prototypes/bundles/pom.xml
+++ b/kura-addon-prototypes/bundles/pom.xml
@@ -344,5 +344,6 @@
     <modules>
         <module>example-driver.bundle</module>
         <module>example-simple-component.bundle</module>
+        <module>example-wire-component.bundle</module>
     </modules>
 </project>
