--- a/kura-addon-prototypes/tests/pom.xml
+++ b/kura-addon-prototypes/tests/pom.xml
@@ -389,6 +389,7 @@
     <modules>
         <module>example-driver.bundle.test</module>
         <module>example-simple-component.bundle.test</module>
+        <module>example-wire-component.bundle.test</module>
     </modules>
 
 </project>
