feat: added factory component prototype
Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/kura-addon-prototypes/bundles/pom.xml
+++ b/kura-addon-prototypes/bundles/pom.xml
@@ -345,5 +345,6 @@
         <module>example-driver.bundle</module>
         <module>example-simple-component.bundle</module>
         <module>example-wire-component.bundle</module>
+        <module>example-factory-component.bundle</module>
     </modules>
 </project>
