--- a/kura-examples/bundles/org.eclipse.kura.example.identity.configuration.extension/build.properties
+++ b/kura-examples/bundles/org.eclipse.kura.example.identity.configuration.extension/build.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2024 Eurotech and/or its affiliates and others
+# Copyright (c) 2024, 2025 Eurotech and/or its affiliates and others
 # 
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
@@ -11,10 +11,10 @@
 #  Eurotech
 #
 
-output.. = target/classes
-bin.includes = META-INF/,\
-               .,\
-               OSGI-INF/,\
-               about_files/,\
-               about.html
+bin.includes = .,\
+               META-INF/,\
+               OSGI-INF/
 source.. = src/main/java/
+output.. = target/classes/
+additional.bundles = org.osgi.service.component.annotations,\
+                     org.osgi.service.metatype.annotations
