build: continuing migration
Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

--- a/kura-examples/bundles/org.eclipse.kura.example.ble.tisensortag.dbus/build.properties
+++ b/kura-examples/bundles/org.eclipse.kura.example.ble.tisensortag.dbus/build.properties
@@ -11,10 +11,10 @@
 #  Eurotech
 #
 
-output.. = target/classes
-bin.includes = META-INF/,\
-               .,\
-               OSGI-INF/,\
-               about.html,\
-               about_files/
+bin.includes = .,\
+               META-INF/,\
+               OSGI-INF/
 source.. = src/main/java/
+output.. = target/classes/
+additional.bundles = org.osgi.service.component.annotations,\
+                     org.osgi.service.metatype.annotations
