--- a/kura-examples/bundles/org.eclipse.kura.demo.heater/pom.xml
+++ b/kura-examples/bundles/org.eclipse.kura.demo.heater/pom.xml
@@ -28,6 +28,7 @@
 	<packaging>eclipse-plugin</packaging>
 
 	<properties>
-		<kura.basedir>${project.basedir}/../..</kura.basedir>
+		<sonar.coverage.jacoco.xmlReportPaths>
+			${project.basedir}/../../tests/*/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 </project>
