--- a/kura-examples/bundles/org.eclipse.kura.example.can/build.properties
+++ b/kura-examples/bundles/org.eclipse.kura.example.can/build.properties
@@ -11,10 +11,11 @@
 #   Eurotech
 #
 
+bin.includes = .,\
+               META-INF/,\
+               OSGI-INF/
 source.. = src/main/java/
 output.. = target/classes/
-bin.includes = META-INF/,\
-               .,\
-               OSGI-INF/,\
-               about.html
+additional.bundles = org.osgi.service.component.annotations,\
+                     org.osgi.service.metatype.annotations
 
