--- a/kura-examples/bundles/org.eclipse.kura.example.container.signature.validation/pom.xml
+++ b/kura-examples/bundles/org.eclipse.kura.example.container.signature.validation/pom.xml
@@ -13,8 +13,7 @@
 	 Eurotech
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -29,8 +28,7 @@
 	<version>3.0.0-SNAPSHOT</version>
 
 	<properties>
-		<sonar.coverage.jacoco.xmlReportPaths>
-			${project.basedir}/../../tests/*/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<kura.basedir>${project.basedir}/../..</kura.basedir>
 	</properties>
 
 </project>
