--- a/kura-examples/bundles/org.eclipse.kura.example.container.signature.validation/build.properties
+++ b/kura-examples/bundles/org.eclipse.kura.example.container.signature.validation/build.properties
@@ -13,11 +13,8 @@
 
 bin.includes = .,\
                META-INF/,\
-               OSGI-INF/,\
-               about.html,\
-               about_files/,\
-               OSGI-INF/dummy_signature_validation.xml
-source.. = src/
-src.includes = about.html,\
-               about_files
+               OSGI-INF/
+source.. = src/main/java/
 output.. = target/classes/
+additional.bundles = org.osgi.service.component.annotations,\
+                     org.osgi.service.metatype.annotations
