--- a/kura-examples/tests/org.eclipse.kura.example.container.signature.validation.test/pom.xml
+++ b/kura-examples/tests/org.eclipse.kura.example.container.signature.validation.test/pom.xml
@@ -25,6 +25,7 @@
     </parent>
 
     <artifactId>org.eclipse.kura.example.container.signature.validation.test</artifactId>
+    <version>3.0.0-SNAPSHOT</version>
     <packaging>eclipse-test-plugin</packaging>
 
     <properties>
@@ -35,13 +36,42 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>prepare-test-resources</id>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
                 <artifactId>tycho-surefire-plugin</artifactId>
-                <version>${tycho-version}</version>
                 <configuration>
                     <failIfNoTests>false</failIfNoTests>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bnd-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
